# rust-ffi-c-example

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs
my_lib/: demo.c
my_lib/source/: wrapper.c  wrapper.h
src/: main.rs
